--- a/app/globals.css
+++ b/app/globals.css
@@ -1,2 +1,9 @@
 @import "tailwindcss";
 
+.shining-text {
+  color: #fff; /* or any color */
+  text-shadow: 
+    0 0 5px #fff, 
+    0 0 10px #fff, 
+    0 0 20px #fff;
+}
