--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,9 @@
     0 0 10px #fff, 
     0 0 20px #fff;
 }
+
+
+.btn-bg{
+background: #575353;
+background: linear-gradient(108deg, rgba(87, 83, 83, 1) 0%, rgba(38, 37, 37, 1) 89%);
+}
